2009-12-09  Andreas Kupries  <andreask@activestate.com>

	* library/safe.tcl: Backport of the streamlined safe base from
	* tests/safe.test: head to the 8.5 branch (See head changelog
	entries 2009-11-05, 2009-11-06, 2009-12-03).

2009-12-07  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclStrToD.c:	Correct conditional compile directives to
	better detect the toolchain that needs extra work for proper underflow
	treatment instead of merely detecting the mips platform. [Bug 2902010].

2009-12-02  Jan Nijtmans  <nijtmans@users.sf.net>

	* tools/genStubs.tcl:	Add support for win32 CALLBACK functions
	(needed for Tk bugfix).

2009-11-30  Donal K. Fellows  <dkf@users.sf.net>

	* doc/Tcl.n: [Bug 2901433]: Improved description of expansion to
	mention that it is using list syntax.

2009-11-27  Donal K. Fellows  <dkf@users.sf.net>

	* doc/BoolObj.3, doc/CrtChannel.3, doc/DictObj.3, doc/DoubleObj.3: 
	* doc/Ensemble.3, doc/Environment.3, doc/FileSystem.3, doc/Hash.3: 
	* doc/IntObj.3, doc/Limit.3, doc/ObjectType.3, doc/PkgRequire.3: 
	* doc/SetChanErr.3, doc/SetResult.3: [Patch 2903921]: Many small
	spelling fixes from Larry Virden.

2009-11-25  Stuart Cassoff  <stwo@users.sf.net>

	* unix/configure.in:	[Patch 2892871]: Remove unneeded
	* unix/tcl.m4:		AC_STRUCT_TIMEZONE and use
	* unix/tclConfig.h.in:	AC_CHECK_MEMBERS([struct stat.st_blksize])
	* unix/tclUnixFCmd.c:	instead of AC_STRUCT_ST_BLKSIZE.
	* unix/configure:	Regenerated with autoconf-2.59.

2009-11-16  Alexandre Ferrieux  <ferrieux@users.sourceforge.net>

	* generic/tclEncoding.c: Fix [Bug 2891556] and improve test to detect
	* tests/econding.test:   similar manifestations in the future.
	
2009-11-12  Don Porter  <dgp@users.sourceforge.net>

	*** 8.5.8 TAGGED FOR RELEASE ***

	* changes:	Update for 8.5.8 release.

	* generic/tclClock.c (TclClockInit):	Do not create [clock] support
	commands in safe interps.

	* tests/io.test:	New test io-53.11 to test for [Bug 2895565].
